--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.env
+./uploads
 # Created by https://www.toptal.com/developers/gitignore/api/linux,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,node
 
